--- a/index.html
+++ b/index.html
@@ -47,11 +47,14 @@
                  data-gallery='[
                     "images/deform/image1.jpg",
                     "images/deform/image2.jpg",
-                    "images/deform/image3.jpg"
+                    "images/deform/image3.jpg",
+                    "images/deform/image4.jpg",
+                    "images/deform/image5.jpg",
+                    "images/deform/image6.jpg"
                  ]'>
                 <h3>Drafting Technician</h3>
                 <h4>CAD Lightsource Ltd. | 2021 - Present</h4>
-                <ul>
+                <ul class="collapsed-view-only">
                     <li>CAD modeling functional parts and assemblies</li>
                     <li>Weldment profiles for laser cutting</li>
                     <li>Sheet metal laser cutting & bending</li>
@@ -63,9 +66,17 @@
                     Location: Varna, Bulgaria<br>
                     Website: <a href="https://deform.bg/">deform.bg</a>
                 </div>
+                <div class="card-description" style="display: none;">
+                    <p>Since 2021, I have been applying my technical skills at my father's metal fabrication firm, specializing in CAD modeling functional parts and assemblies. My experience includes designing weldment profiles for laser beam and sheet metal cutting & bending; 3D printing, CNC routing, metal and gypsum casting, and rendering product concepts for client visualization. Over time, my tasks grew in complexity, allowing me to develop strong proficiency in SolidWorks.</p>
+                </div>
             </div>
 
-            <div class="card">
+            <div class="card" data-card-id="rebus-intern" 
+            data-gallery='[
+               "images/rebus/image1.jpg",
+               "images/rebus/image2.jpg",
+               "images/rebus/image3.jpg"
+            ]'>
                 <h3>Intern</h3>
                 <h4>Rebus Flight School | 2024</h4>
                 <ul>
