--- a/news.html
+++ b/news.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Aerospace Engineering Portfolio</title>
+    <title>News - Your Aerospace Engineering Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
 </head>
@@ -32,47 +32,28 @@
         <div class="hero-container">
             <img src="gradient-hero-prerender.avif" alt="Hero Background" class="hero-image">
             <div class="hero-content">
-                <h1>Aerospace Engineering Student & CAD Specialist</h1>
-                <p>Combining technical expertise in CAD design with a passion for aviation and engineering</p>
+                <h1>Latest News & Updates</h1>
+                <p>Stay updated with my latest achievements and activities</p>
             </div>
         </div>
     </section>
 
-    <section class="profile-section">
-        <div class="profile-container">
-            <div class="profile-image">
-                <img src="images/profile.jpg" alt="Profile Picture">
+    <section id="news" class="section">
+        <div class="card-grid">
+            <div class="card">
+                <h3>News Title 1</h3>
+                <h4>Date: April 2024</h4>
+                <p>Brief description of the news or update. This can include recent achievements, events, or other relevant information.</p>
             </div>
-            <div class="profile-content">
-                <h2>About Me</h2>
-                <p>I am a passionate high school student with aspirations to become an aerospace engineer with expertise in CAD design and a strong foundation in engineering principles. My journey combines technical skills with creative problem-solving, focusing on innovative solutions in aerospace and mechanical design.</p>
-                <div class="profile-stats">
-                    <div class="stat">
-                        <span class="stat-number">3+</span>
-                        <span class="stat-label">Years Experience</span>
-                    </div>
-                    <div class="stat">
-                        <span class="stat-number">10+</span>
-                        <span class="stat-label">Projects</span>
-                    </div>
-                    <div class="stat">
-                        <span class="stat-number">3</span>
-                        <span class="stat-label">Languages</span>
-                    </div>
-                </div>
+            <div class="card">
+                <h3>News Title 2</h3>
+                <h4>Date: March 2024</h4>
+                <p>Another news item or update. You can include links to related projects or external resources.</p>
             </div>
-        </div>
-    </section>
-
-    <section class="gallery-scroller">
-        <div class="scroller" data-direction="left" data-speed="slow">
-            <div class="scroller__inner">
-                <!-- Images will be dynamically inserted here -->
-            </div>
-        </div>
-        <div class="scroller" data-direction="right" data-speed="fast">
-            <div class="scroller__inner">
-                <!-- Images will be dynamically inserted here -->
+            <div class="card">
+                <h3>News Title 3</h3>
+                <h4>Date: February 2024</h4>
+                <p>More news content. This section can be updated regularly to keep visitors informed about your latest activities.</p>
             </div>
         </div>
     </section>
@@ -102,4 +83,4 @@
         </div>
     </footer>
 </body>
-</html>
+</html> 
